--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@ DB_WSGI_APPLICATION=config.wsgi.application
 DB_ENGINE=django.db.backends.postgresql
 DB_NAME=spotify
 DB_USER=postgres
-DB_PASSWORD=
+DB_PASSWORD=bekzodbek
 DB_HOST=localhost
 DB_PORT=5432
